--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@next/mdx": "^15.3.2",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@shikijs/rehype": "^3.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
-    "highlight.js": "^11.11.1",
     "lenis": "^1.3.15",
     "motion": "^12.23.25",
     "next": "^16.0.10",
@@ -29,6 +29,7 @@
     "react-dom": "^19.2.3",
     "react-use-measure": "^2.1.7",
     "sharp": "^0.34.4",
+    "shiki": "^3.22.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2"
